--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "anlutro/l4-settings": "^0.7.2",
         "artesaos/seotools": "^0.11.1",
         "creitive/laravel5-breadcrumbs": "^2.0",
         "fideloper/proxy": "~3.3",
