--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "artesaos/seotools": "^0.11.1",
         "creitive/laravel5-breadcrumbs": "^2.0",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "uxweb/sweet-alert": "^1.4",
